<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ba"
        android:orientation="vertical">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="40dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                />
        <ImageView
            android:id="@+id/image_tv"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/images"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher">
        </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_fav"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"/>

        <com.like.LikeButton
            android:id="@+id/fv_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:anim_scale_factor="2"
            app:circle_end_color="@color/colorAccent"
            app:circle_start_color="@color/colorPrimaryDark"
            app:dots_primary_color="@color/colorAccent"
            app:dots_secondary_color="@color/colorPrimary"
            app:icon_size="30dp"
            app:icon_type="heart"
            app:is_enabled="true"
            app:like_drawable="@drawable/heart_on"
            app:liked="false"
            app:unlike_drawable="@drawable/heart_off">
        </com.like.LikeButton>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="#9a0a6e"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/date_is_not_available"
                android:textColor="#9a0a6e"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publisher_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/publishers"
                android:textColor="#9a0a6e"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/published_date"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publisheddate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/date_is_not_available"
                android:textColor="#9a0a6e"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dec_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/no_description_available"
                android:textColor="#9a0a6e"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>